[Fix] Fix issue where non-CU-page-overlay would be visible in black after a change in URL (like on the FB, on viewing shared photo and then closing it and coming back to the main feed)

--- a/styles/scss/units.scss
+++ b/styles/scss/units.scss
@@ -53,7 +53,7 @@ Also, hence the generous use of !important property here.
   pointer-events: none !important;
   transition: opacity 0.1s;
   background-color: #000;
-  //opacity: 0.05; // this is done programmatically
+  opacity: 0; // this is changed programmatically
 }
 
 /* ****** 'Select Link' module styles ***** */
